Fix text field's (per value) prefix, suffix not showing in item form

--- a/site/assets/css/flexicontent.css
+++ b/site/assets/css/flexicontent.css
@@ -1515,10 +1515,12 @@ body .fc-nowrap-box .nowrap_box .label,
 	margin-top: 0;
 	margin-bottom: 12px;
 	margin-right: 12px;
+	display: inline-block;
 }
 #flexicontent .fc-xpended-btns {
 	margin: 0 0 8px 0 !important;
 	float: none;
+	display: inline-block;
 }
 #flexicontent .fc-xpended-row {
 	box-sizing: border-box;
