--- a/site/assets/css/flexicontent_rtl.css
+++ b/site/assets/css/flexicontent_rtl.css
@@ -1520,10 +1520,12 @@ body .fc-nowrap-box .nowrap_box .label,
 	margin-top: 0;
 	margin-bottom: 12px;
 	margin-left: 12px;
+	display: inline-block;
 }
 #flexicontent .fc-xpended-btns {
 	margin: 0 0 8px 0 !important;
 	float: none;
+	display: inline-block;
 }
 #flexicontent .fc-xpended-row {
 	box-sizing: border-box;
